--- a/style.css
+++ b/style.css
@@ -75,9 +75,10 @@ p {
   margin-top: 20px;
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 
-#slider {
+#slider-visualizer {
   margin-left: 10px;
 }
 
