--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ p {
   font-size: 16px;
   text-align: center;
   overflow-wrap: anywhere;
+  padding: 10px 30px 10px 30px;
 }
 
 #bars-container {
